--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,21 @@
 pandas
 plotly
 pydantic
-numpy
-psutil
+numpy<2
+# psutil
 pytz
 pandas_ta
-typing-extensions
-matplotlib
+# typing-extensions
+# matplotlib
 # conda install -c conda-forge ta-lib
 # TA-Lib~=0.4.19
 
-pytest~=7.4.2
-pandera~=0.18.0 # conda install -c conda-forge pandera
-backtrader[plotting]~=1.9.78.123
-ccxt~=4.2.4
+pytest
+pandera # conda install -c conda-forge pandera
+# backtrader[plotting]
+ccxt
 # MetaTrader5
-bottleneck~=1.3.6
+# bottleneck~=1.3.6
 # beautifulsoup4
 
 # conda update --all
