--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,15 @@
 pandas
 plotly
 pydantic
-numpy<2
+numpy
 matplotlib
 scipy
 scikit-learn
 # psutil
 pytz
 pandas_ta
-tensorflow
+tensorflow[and-cuda]
+tf-keras
 prophet
 # typing-extensions
 # matplotlib
