--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,11 @@ scikit-learn
 # psutil
 pytz
 pandas_ta
-tensorflow==2.17.0
-# tensorflow[and-cuda]
+tensorflow==2.18.0
+# tensorflow[and-cuda]<=2.14.0
+
 # tensorflow-gpu>=2.3.0
-#tf-keras
+# tf-keras
 prophet
 # typing-extensions
 # matplotlib
