--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
---index-url  https://nuget.behinrahkar.com/repository/pypi-proxy/simple
---extra-index-url  https://nuget.behinrahkar.com/repository/pypi-hosted/simple
+#--index-url  https://nuget.behinrahkar.com/repository/pypi-proxy/simple
+#--extra-index-url  https://nuget.behinrahkar.com/repository/pypi-hosted/simple
 
 br_py==1.0.3
 # conda install -c conda-forge python-kaleido
@@ -19,7 +19,7 @@ pandas_ta
 #tensorflow
 colorama
 #==2.18.0
-# tensorflow==2.18.0
+tensorflow[cuda]~=2.16.1
 
 # tensorflow-gpu>=2.3.0
 # tf-keras
@@ -40,9 +40,9 @@ ccxt
 # conda update --all
 
 # conda install pip
+
 # pip install -r requirements.txt
 
-fastapi
 contextvars
 starlette
 deepdiff
